# zspotify

./: README.md  pyproject.toml  requirements.txt
zspotify/: __main__.py
